# HelloSDL

./: CMakeLists.txt  build.py  main.cpp
